--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -42,6 +42,12 @@
 	#= CountInInvoce #
 </p>
 # } #
+# if(DocumentWeight != null){ #
+<p>
+	<span>@Entities.DocumentWeight:</span>
+	#= DocumentWeight #
+</p>
+# } #
 # if(Volume != null){ #
 <p>
 	<span>@Entities.Volume (m3):</span>
