--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -71,6 +71,7 @@
 			<li>ForwarderName - Имя перевозчика</li>
 			<li>MRN - MRN</li>
 			<li>CountInInvoce - Количество в инвойсе</li>
+			<li>DocumentWeight - Вес по документу</li>
 		</ul>
 	</p>
 	<p>
