--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -57,6 +57,17 @@
 			@Html.DropDownListFor(x => x.DefaultSenderId, (IDictionary<long?, string>) ViewBag.Senders, "")
 		</div>
 	</div>
+	<hr />
+	<h4>
+		@Pages.Calculation
+	</h4>
+	<div class="row">
+		<div class="span2">@Html.EditorWithLabelFor(x=>x.FactureCost)</div>
+		<div class="span2">@Html.EditorWithLabelFor(x => x.FactureCostEx)</div>
+		<div class="span2">@Html.EditorWithLabelFor(x => x.TransitCost)</div>
+		<div class="span2">@Html.EditorWithLabelFor(x => x.PickupCost)</div>
+		<div class="span2">@Html.EditorWithLabelFor(x => x.InsuranceRate)</div>
+	</div>
 }
 <hr />
 <h4>
