edit calculation fields by sender

--- a/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
+++ b/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
@@ -21,13 +21,14 @@
 		@Html.EditorWithLabelFor(model => model.AddressLoad)
 		@Html.EditorWithLabelFor(model => model.Weight)
 		@Html.EditorWithLabelFor(model => model.Count)
-		@Html.EditorWithLabelFor(model => model.Currency)
+		@Html.EditorWithLabelFor(model => model.Volume)
 		@Html.EditorWithLabelFor(model => model.DocumentWeight)
 	</div>
 	<div class="span3">
 		@Html.EditorWithLabelFor(model => model.FactureCost)
 		@Html.EditorWithLabelFor(model => model.FactureCostEx)
 		@Html.EditorWithLabelFor(model => model.PickupCost)
-		@Html.EditorWithLabelFor(model => model.Volume)
+		@Html.EditorWithLabelFor(model => model.TransitCost)
+		@Html.EditorWithLabelFor(model => model.Currency)
 	</div>
 </div>
