fixed downoading other files

--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -291,7 +291,7 @@
 	# for(i in OtherFiles) { #
 	# var item = OtherFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
