--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -62,11 +62,15 @@
 		@Pages.Calculation
 	</h4>
 	<div class="row">
-		<div class="span2">@Html.EditorWithLabelFor(x=>x.FactureCost)</div>
-		<div class="span2">@Html.EditorWithLabelFor(x => x.FactureCostEx)</div>
-		<div class="span2">@Html.EditorWithLabelFor(x => x.TransitCost)</div>
-		<div class="span2">@Html.EditorWithLabelFor(x => x.PickupCost)</div>
-		<div class="span2">@Html.EditorWithLabelFor(x => x.InsuranceRate)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.FactureCost)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.FactureCostEx)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.TransitCost)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.PickupCost)</div>
+	</div>
+	<div class="row">
+		<div class="span3">@Html.EditorWithLabelFor(x => x.InsuranceRate)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.TariffPerKg)</div>
+		<div class="span3">@Html.EditorWithLabelFor(x => x.ScotchCostEdited)</div>
 	</div>
 }
 <hr />
