embeded polish language

--- a/Alicargo/Views/Shared/Menu.cshtml
+++ b/Alicargo/Views/Shared/Menu.cshtml
@@ -136,6 +136,9 @@
 							@Html.ActionLink(LanguageName.Russian, MVC.Home.Culture(TwoLetterISOLanguageName.Russian, Request.RawUrl))
 						</li>
 						<li>
+							@Html.ActionLink(LanguageName.Polish, MVC.Home.Culture(TwoLetterISOLanguageName.Polish, Request.RawUrl))
+						</li>
+						<li>
 							@Html.ActionLink(LanguageName.Italian, MVC.Home.Culture(TwoLetterISOLanguageName.Italian, Request.RawUrl))
 						</li>
 						<li>
