--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
 			case TwoLetterISOLanguageName.Italian:
 				@Scripts.Render(JsPaths.ItJs)
 				break;
+			case TwoLetterISOLanguageName.Polish:
+				@Scripts.Render(JsPaths.PlJs)
+				break;
 		}
 	</head>
 	<body>		
